Adding ApplicationIT and configuring app packaging properly